# MyVoxelEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
Configs/: config.json
Scripts/: record_voxel_engine.sh
Shaders/: fragment.glsl  voxel_fragment.glsl  voxel_vertex.glsl
Source/: Application.cpp  Application2.cpp
Source/Models/: Model.h  Tree.cpp  Tree.h
Source/Player/: Player.cpp  Player.h  PlayerConfigReader.cpp  PlayerConfigReader.h  PlayerController.cpp  PlayerController.h
Source/Sky/: cubemap_texture.cpp  ogldev_cubemap_texture.h
Source/Utils/: ConfigReader.cpp  ConfigReader.h  GpuUsage.cpp  HeightMapGenerator.cpp  HeightMapGenerator.h
Source/World/: BlockDatabase.cpp  BlockDatabase.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  SparseVoxelOctree.cpp  SparseVoxelOctree.h  Voxel.cpp  Voxel.h
Source/World/Generation/: BasicBiome.cpp  BasicBiome.h  Biome.h
Source/World/Generation/Biomes/: AlpineBiome.h  BasicBiome.h  Biome.cpp  Biome.h  DesertBiome.h  ForestBiome.h  MountainBiome.h  SnowyBiome.h
